2fa other funcs

--- a/packages/core/admin/admin/src/translations/en.json
+++ b/packages/core/admin/admin/src/translations/en.json
@@ -15,7 +15,9 @@
   "Auth.form.confirmPassword.label": "Confirm Password",
   "Auth.form.currentPassword.label": "Current Password",
   "Auth.form.email.label": "Email",
+  "Auth.form.phone.label": "Phone Number",
   "Auth.form.email.placeholder": "e.g. kai@doe.com",
+  "Auth.form.phone.placeholder": "91122513",
   "Auth.form.error.blocked": "Your account has been blocked by the administrator.",
   "Auth.form.error.code.provide": "Incorrect code provided.",
   "Auth.form.error.confirmed": "Your account email is not confirmed.",
@@ -38,7 +40,7 @@
   "Auth.form.lastname.label": "Last name",
   "Auth.form.lastname.placeholder": "e.g. Doe",
   "Auth.form.password.hide-password": "Hide password",
-  "Auth.form.password.hint": "Must be at least 8 characters, 1 uppercase, 1 lowercase & 1 number",
+  "Auth.form.password.hint": "Must be at least 15 characters, 1 uppercase, 1 lowercase & 1 number & 1 special character",
   "Auth.form.password.show-password": "Show password",
   "Auth.form.register.news.label": "Keep me updated about new features & upcoming improvements (by doing this you accept the {terms} and the {policy}).",
   "Auth.form.register.subtitle": "Credentials are only used to authenticate in Strapi. All saved data will be stored in your database.",
